tests/ui/moves/move-out-of-slice-2.stderr
error[E0277]: the size for values of type `[A]` cannot be known at compilation time
  --> $DIR/move-out-of-slice-2.rs:10:10
   |
LL |         [a @ ..] => {}
   |          ^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[A]`
   = note: all local variables must have a statically known size

error[E0277]: the size for values of type `[A]` cannot be known at compilation time
  --> $DIR/move-out-of-slice-2.rs:15:16
   |
LL |         [_, _, b @ .., _] => {}
   |                ^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[A]`
   = note: all local variables must have a statically known size

error[E0277]: the size for values of type `[C]` cannot be known at compilation time
  --> $DIR/move-out-of-slice-2.rs:22:10
   |
LL |         [c @ ..] => {}
   |          ^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[C]`
   = note: all local variables must have a statically known size

error[E0277]: the size for values of type `[C]` cannot be known at compilation time
  --> $DIR/move-out-of-slice-2.rs:27:16
   |
LL |         [_, _, d @ .., _] => {}
   |                ^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[C]`
   = note: all local variables must have a statically known size

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
